# emi-book-2020-splitting-code

./: LICENSE  README.md
matlab/: .gitignore  README.md  combine_cells.m  domain_geometry.m  extract_Ui_and_Ue.m  get_center_idx_u.m  grandi_init.mat  grandi_init_Ko10.mat  grandi_init_parameters.m  grandi_init_states.m  grandi_rhs.m  grandi_rhs_single.m  make_plot.m  plot_solution.m  run_simulation.m  run_simulation_mini.m  set_up_Im_matrix.m  set_up_cell.m  set_up_cell_matrix.m  set_up_extracellular_matrix.m  set_up_mesh.m  set_up_stim_param.m  solve_system.m
python/: .gitignore  README.md  binary_io.py  combine_cells.py  domain_geometry.py  dump_parameters.py  enforce_outer_boundary_conditions.py  grandi_c.py  grandi_numpy.py  index_mesh.py  ionic_models.py  lib_util.py  linear_solvers.py  linear_solvers_viennacl_cpu.py  linear_solvers_viennacl_util.py  plot_solution.py  run_simulation.py  set_up_Im_matrix.py  set_up_cell.py  set_up_cell_matrix.py  set_up_membrane_factors.py  set_up_mesh.py  set_up_stim_param.py  set_up_symmetric_extracellular_matrix.py  solve_system.py  test_index_mesh.py  timer.py  util.py
python/c/: CMakeLists.txt  rebuild_lib.sh
python/c/ionic_models/: CMakeLists.txt  grandi_cpu.c
python/c/linear_solvers/: CMakeLists.txt  matrix_csr.h  solve_viennacl_cpu.cpp
